[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-integration-testing"
version = "0.1.0"

[dependencies]
arraystring = "0.3.0"
async-std = {version = "=1.6.2", features = ["attributes"]}
codec = {package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"]}
diff = "0.1.12"
futures = "0.3.5"
hex = "0.4.2"
hex-literal = "0.2.1"
jsonrpsee = {version = "0.1.0", features = ["ws"]}
lazy_static = "1.4.0"
libsecp256k1 = "0.3.5"
log = "0.4.11"
rand = "0.7.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.55"
strum = "0.18.0"
substrate-subxt = {version = "0.12.0", git = "https://github.com/Veniamin/substrate-subxt", package = "substrate-subxt"}
substrate-subxt-proc-macro = {version = "0.12.0", git = "https://github.com/Veniamin/substrate-subxt", package = "substrate-subxt-proc-macro"}

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-arithmetic]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-rpc]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-keyring]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.eq-distribution]
default-features = false
package = "eq-distribution"
path = "../pallets/eq-distribution"
version = "0.1.0"


[dependencies.eq-balances]
default-features = false
package = "eq-balances"
path = "../pallets/eq-balances"
version = "0.1.0"

[dependencies.eq-utils]
default-features = false
package = "eq-utils"
path = "../eq-utils"
version = "0.1.0"

[dependencies.eq-vesting]
default-features = false
package = "eq-vesting"
path = "../pallets/eq-vesting"
version = "0.1.0"

[dependencies.eq-claim]
default-features = false
package = "eq-claim"
path = "../pallets/eq-claim"
version = "0.1.0"

[dependencies.eq-integration-testing-macro]
default-features = false
package = "eq-integration-testing-macro"
path = "eq-integration-testing-macro"
version = "0.1.0"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment-rpc-runtime-api'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "eq-balances/std",
  "eq-vesting/std",
  "eq-distribution/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "eq-claim/std",
]
