[package]
name = "eq-primitives"
version = "0.1.0"
authors = ["equilibrium"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
impl-trait-for-tuples = "0.1.3"
serde = { version = "1.0.101", optional = true, features = ["derive"] }

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-runtime]
 git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"
 default-features = false

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.system]
default-features = false
package = 'frame-system'
git = 'https://github.com/paritytech/substrate.git'

version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"system/std",
	"serde",
]