[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-utils"
version = "0.1.0"

[dependencies]

integer-sqrt = "0.1.3"

[dependencies.sp-arithmetic]
default-features = false
git = 'https://github.com/paritytech/substrate.git'

tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.substrate-fixed]
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"

[features]
default = ['std']
std = [
  'sp-arithmetic/std',
]
