[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'Equilibrium Substrate'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'eq-node'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"] }
jsonrpc-core = "14.2.0"
futures = '0.3.4'
log = '0.4.8'
parking_lot = '0.10.0'
structopt = '0.3.8'

[dependencies.eq-session-manager]
 version = "0.1.0"
 default-features = false
 path = "../pallets/eq-session-manager"
 package = "eq-session-manager"

[dependencies.eq-node-runtime]
path = '../runtime'
version = '2.0.0-rc5'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'

version = '0.8.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
features = ["wasmtime"]
version = '0.8.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'

version = '0.8.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'

version = '0.8.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
features = ["wasmtime"]
version = '0.8.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'

version = '0.8.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'

version = '0.8.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
features = ["wasmtime"]
version = '0.8.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'

version = '0.8.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"


[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-rc5'
tag="v2.0.0-rc5+2"


[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment-rpc-runtime-api'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"


[dependencies.sp-blockchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.frame-rpc-system]
default-features = false
package = 'substrate-frame-rpc-system'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.pallet-transaction-payment-rpc]
default-features = false
package = 'pallet-transaction-payment-rpc'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"
 

[[bin]]
name = 'eq-node'