[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'Equilibrium Substrate'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'eq-node'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = {package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"]}
futures = '0.3.4'
jsonrpc-core = "14.2.0"
log = '0.4.8'
parking_lot = '0.10.0'
structopt = {version = '0.3.8', optional = true}

[dependencies.eq-session-manager]
default-features = false
package = "eq-session-manager"
path = "../pallets/eq-session-manager"
version = "0.1.0"

[dependencies.eq-node-runtime]
path = '../runtime'
version = '2.0.0-rc6'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '0.8.0-rc6'

[dependencies.sc-cli]
features = ["wasmtime"]
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = "v2.0.0-rc6"
version = '0.8.0-rc6'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'

tag = "v2.0.0-rc6"
version = '0.8.0-rc6'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'

tag = "v2.0.0-rc6"
version = '0.8.0-rc6'

[dependencies.sc-executor]
features = ["wasmtime"]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '0.8.0-rc6'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'

tag = "v2.0.0-rc6"
version = '0.8.0-rc6'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'

tag = "v2.0.0-rc6"
version = '0.8.0-rc6'

[dependencies.sc-service]
features = ["wasmtime"]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '0.8.0-rc6'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'

tag = "v2.0.0-rc6"
version = '0.8.0-rc6'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '0.8.0-rc6'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '0.8.0-rc6'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment-rpc-runtime-api'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-blockchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.substrate-frame-rpc-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'


[dependencies.pallet-transaction-payment-rpc]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment-rpc'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'


[build-dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[[bin]]
name = 'eq-node'

[features]
cli = [
  "sc-cli",
  "structopt",
  "frame-benchmarking-cli",
]
default = ["cli"]
runtime-benchmarks = [
  "eq-node-runtime/runtime-benchmarks",
  "frame-benchmarking-cli",
]
