[package]
name = "eq-node-runtime"
version = "2.0.0-rc5"
authors = ["equilibrium"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

serde_json = { git = "https://github.com/nikvolf/json", default-features = false, features = ["alloc"] }
static_assertions = "1.1.0"

[dependencies.node-primitives]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"
default-features = false

[dependencies.sp-arithmetic]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"
default-features = false

 [dependencies.eq-primitives]
 version = "0.1.0"
 default-features = false
 path = "../eq-primitives"
 package = "eq-primitives"

 [dependencies.eq-balances]
 version = "0.1.0"
 default-features = false
 path = "../pallets/eq-balances"
 package = "eq-balances"

 [dependencies.eq-session-manager]
 version = "0.1.0"
 default-features = false
 path = "../pallets/eq-session-manager"
 package = "eq-session-manager"

[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.pallet-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"


[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag="v2.0.0-rc5+2"
version = "0.8.0-rc5"

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment-rpc-runtime-api'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system-rpc-runtime-api'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"


[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'

version = '1.0.6'

[features]
default = ["std"]
std = [
	'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'pallet-session/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
	
    'timestamp/std',
    'transaction-payment/std',
    "pallet-transaction-payment-rpc-runtime-api/std",
    "frame-system-rpc-runtime-api/std",
	"serde_json/std",
	
    "eq-primitives/std",
	"eq-balances/std",
    "eq-session-manager/std",

    "sp-arithmetic/std",
    "node-primitives/std",
]