[package]
name = "eq-balances"
version = "0.1.0"
authors = ["equilibrium"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
safe-mix = { default-features = false, version = '1.0.0' }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
impl-trait-for-tuples = "0.1.3"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.system]
default-features = false
package = 'frame-system'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-runtime]
 git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"
 default-features = false

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"

[dependencies.sp-arithmetic]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc5'
tag="v2.0.0-rc5+2"
default-features = false

[dependencies.eq-primitives]
 version = "0.1.0"
 default-features = false
 path = "../../eq-primitives"
 package = "eq-primitives"

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'safe-mix/std',
	"sp-std/std",
	'system/std',
    "sp-runtime/std",
	"sp-arithmetic/std",
	"eq-primitives/std",
	"serde",
]

